Clean up the ffx.numerics.clustering and ffx.numerics.quickhull documentation